--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node -r dotenv/config  ./bin/www | pino-colada"
+    "start": "node -r dotenv/config  ./bin/www | pino-colada",
+    "watch": "nodemon -e js,css,html,jpg,png,scss --exec \"npm run start\""
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -14,6 +15,7 @@
     "express-pino-logger": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
+    "nodemon": "^2.0.6",
     "pino-colada": "^2.1.0"
   }
 }
